developing accurancy of chchunk: get rid of stopwords

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,4 @@ openai>=1.0.0  # LLM integration
 tqdm  # Progress tracking
 python-dotenv  # Environment variable management
 python-multipart # UploadFile, File, Form in FastAPI
+nltk
