--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .env
 backend/__pycache__/
-backend/data/*
+backend/data/
+backend/data/embeddings/
+backend/data/embeddings/*.faiss
+backend/data/embeddings/*.pkl
